@@ -2,6 +2,8 @@
 
 	* Tools/AGSHtml.m: Create automatic references to protocols in
 	type specifications of the form (id<protocol1,protocol2,...>)
+	* Tools/autogsdoc.m: Add -Files option to read names of files
+	to process as a property list rather than using command line args.
 
 2002-10-12  Richard Frith-Macdonald <rfm@gnu.org>
 
